--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,13 @@ repositories {
 
 
     dependencies {
-        testImplementation platform('org.junit:junit-bom:5.10.0')  // тестирование
+        testImplementation platform('org.junit:junit-bom:5.10.0')
         testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
         testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-        testImplementation 'org.assertj:assertj-core:3.24.2'
+        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
+        testImplementation 'org.junit.jupiter:junit-jupiter-params:5.10.0'
+        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
+        testImplementation 'org.assertj:assertj-core:3.24.2' // Зависимость для AssertJ (для удобных проверок)
     }
 
     test {
