--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,10 @@ repositories {
         testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
         testImplementation 'org.junit.jupiter:junit-jupiter-params:5.10.0'
         testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
-        testImplementation 'org.assertj:assertj-core:3.24.2' // Зависимость для AssertJ (для удобных проверок)
+        testImplementation 'org.assertj:assertj-core:3.24.2'
+        testImplementation 'org.mockito:mockito-core:5.+'
+        testImplementation 'org.mockito:mockito-junit-jupiter:5.+'
+
     }
 
     test {
